used css props to fix issue where product would spill out of banner container

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,69 +1,53 @@
-.actual__banner{
-    display: flex;
-    width: 100%;
+.home{
     max-width: 1500px;
     margin-left: auto;
     margin-right: auto;
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
-    z-index: -1;
-    margin-bottom: -345px;
 }
 
+.home__row{
+    display: flex;
+}
 
-.product__row{
+.home__image{
+    width: 100%;
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    margin-bottom: -350px;
+    z-index: -1;
+}
+    
+    
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .product__row{
      background-color: white;
      margin-top: 20px;
      justify-content: center;
      display: flex;
-
-    
-  
- }
+}
 
  .home__row{
-     margin-right: 25px;
+     display: flex;
+     z-index: 1;
+     margin-left: 5px;
+     margin-right: 5px;
+     flex-wrap: wrap;
+     flex-direction: column;
      
- }
-
- .home__row2{
-    background-color: white;
-    margin-top: 250px;
-    justify-content: center;
-    display: inline-block;
-    
-
- }
-
- .home__row3{
-    background-color: white;
-    margin-top: 250px;
-    justify-content: center;
-    display: inline-block;
-
- }
- 
- .home__row4{
-    background-color: white;
-    margin-top: 250px;
-    justify-content: center;
-    display: inline-block;
-
- }
-
- .home__row5{
-    background-color: white;
-    margin-top: 250px;
-    justify-content: center;
-    display: inline-block;
-
- }
-
- .row2{
-    margin-left: 400px;
-    margin-top: 50px;
-    background-color: white;
-
- }
-
+}
 
  
+
+  */
